--- a/centos7_jdk8/Dockerfile
+++ b/centos7_jdk8/Dockerfile
@@ -4,13 +4,15 @@ MAINTAINER 614141165@qq.com
 ENV LANG en_US.UTF-8
 ENV JAVA_HOME /usr/local/jdk1.8.0_144
 ENV INSTALL_HOME /opt
-ENV CLASSPATH $CLASSPATH:$JAVA_HOME
+ENV CLASSPATH $CLASSPATH:$JAVA_HOME/bin
+ENV PATH $PATH:$JAVA_HOME
 
 ADD jdk-8u144-linux-x64.tar.gz $INSTALL_HOME/tars
 
-RUN tar -zxf $INSTALL_HOME/tars/jdk-8u144-linux-x64.tar.gz /usr/local/jdk1.8.0_144 && \
+RUN tar -zxf $INSTALL_HOME/tars/jdk-8u144-linux-x64.tar.gz -C /usr/local/ && \
     rm -f && $INSTALL_HOME/tars/jdk-8u144-linux-x64.tar.gz
 
 EXPOSE $JAVA_HOME
 EXPOSE $CLASSPATH
+EXPOSE $PATH
 
