--- a/centos7_mysql/Dockerfile
+++ b/centos7_mysql/Dockerfile
@@ -1,9 +1,11 @@
-FROM centos:v1.17.11.2
+FROM centos7
 MAINTAINER 614141165@qq.com
 
 ENV LANG en_US.UTF-8
 ENV JAVA_HOME /usr/local/jdk1.8.0_144
+ENV INSTALL_HOME /opt
 ENV CLASSPATH $CLASSPATH:$JAVA_HOME
 ENV PATH $PATH:$JAVA_HOME/bin
 
 ADD jdk-8u144-linux-x64.tar.gz /usr/local
+
